# Fireseed

./: .fireseed.toml  .gitignore  README.md  _keylistener.py  app.py  commands.py  compact.py  config.py  context.py  cost_tracker.py  engine.py  input_ui.py  llm.py  permissions.py  plan.py  pyproject.toml  sandbox_test.txt  session.py  session_viewer.py  skills.py  skills_bundled.py  worker_manager.py
docs/: feature-design-notes.md  migration-plan.md
sandbox/: __init__.py  checker.py  command_matcher.py  config.py  manager.py  wrapper.py
tests/: test_commands.py  test_compact.py  test_config.py  test_cost_tracker.py  test_input_ui.py  test_keylistener.py  test_permissions.py  test_plan.py  test_sandbox.py  test_session.py  test_session_viewer.py  test_skills.py  test_tools.py  test_worker_manager.py
tools/: __init__.py  agent.py  ask_user.py  base.py  bash.py  edit.py  plan_tools.py  write.py
